# AI-Agents

./: .env.example  openai_sdk_basic.ipynb  pyproject.toml  requirements.txt
Basic/: openai_sdk_basic.ipynb  product_assistant.ipynb
OpenAI-Agents_SDK/: ADK_Basics.ipynb  Sales_Agent.ipynb
Profile_Summeriser/: Profile_Chatbot.ipynb  Profile_Chatbot_with_tools.ipynb
openai-agent/: adk_basic.ipynb  response_stream.py  sales_agent.ipynb
profile-summeriser/: profile.ipynb  tool_call.ipynb
profile-summeriser/me/: summary.txt
