[project]
name = "ai-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=6.12.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "openai>=2.31.0",
    "openai-agents>=0.14.2",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
]
